clusters/KC-Int/deployments/media/sonarr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: sonarr
    namespace: media
spec:
    selector:
        app: sonarr
    ports:
        - port: 8989
