clusters/KC-Int/deployments/media/sonarr/app/ingress.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: sonarr
    namespace: media
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:oikgP9k1vN/cA7QtDKh1YcxmjKPBvlExFeI=,iv:ZgPfTcECL99fTGP9u+au1q9pmM4nHObyovvhViYDejo=,tag:EL0FTirRBGnGX6lkZKuShg==,type:str]
          kind: Rule
          services:
            - name: sonarr
              port: 8989
    tls:
        secretName: production-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwNUJQZjhrTlZ5ZUhxcmF2
[...]
            dGQHvOaQmAsst0NFE7wSbF31A92o/t+x1A+5v7PIUkqqriRB7eUtmg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-19T19:54:58Z"
    mac: ENC[AES256_GCM,data:iKtVxVcVTHpqqX+la56PmiBvFl32DFhdXr3Giteh0UWaQBdcOemODd+3Rtu4qMkB1AL/VSQn6dRNkl/bVNLHuCSohC3xeqef3K/x7uaX7TO7cuyN+6Ry70Jtuz0olX04D9QZ3+P7lmljtFV8vNWM8ZvwNAziqweVjEyvv5/lupM=,iv:TxzSIUZuq6F6cBgAUd1zfwloGIlb9GFlg0SmIPkH870=,tag:UREd4sMLe0jYlV0N3GxDfw==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
